--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
       href="https://fonts.googleapis.com/css2?family=Bowlby+One&family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="styles.css"
+      media="print"
+      onload="this.media='all'"
+    />
+    <noscript><link rel="stylesheet" href="styles.css" /></noscript>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
     <!--app-head-->
   </head>
-  <body>
-    <div id="root"><!--app-html--></div>
+  <body >
+    <div id="root" class="preload"><!--app-html--></div>
     <script type="module" src="/src/entry-client.jsx"></script>
   </body>
 </html>
